--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,43 @@
+server.port=8080
 
+
+########################################################
+###datasource
+########################################################
+spring.datasource.url = jdbc:mysql://localhost:3306/ddd-test
+spring.datasource.username = root
+spring.datasource.password = 123456
+spring.datasource.driverClassName = com.mysql.jdbc.Driver
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.auto-commit=true
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=MysqlHikariCP
+spring.datasource.hikari.max-lifetime=180000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.connection-test-query=SELECT 1
+
+########################################################
+### Java Persistence Api
+########################################################
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+# stripped before adding them to the entity manager)
+spring.jpa.database-platform= org.hibernate.dialect.MySQL5Dialect
+
+########################################################
+### log setting
+########################################################
+logging.level.root=INFO
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+
+logging.file.name=spring_boot.log
+logging.file.path=./
+logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n
+logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
