--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 ########################################################
 ###datasource
 ########################################################
-spring.datasource.url = jdbc:mysql://localhost:3306/ddd-test
+spring.datasource.url = jdbc:mysql://localhost:3306/ddd-test?characterEncoding=utf-8
 spring.datasource.username = root
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
