--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.jpa.database = MYSQL
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 # Naming strategy
 # stripped before adding them to the entity manager)
 spring.jpa.database-platform= org.hibernate.dialect.MySQL5Dialect
